force-app/main/default/objects/Tax_Payer_Detail__c/fields/AverageTaxPaidSoFar__c.field-meta.xml
<CustomField>
    <fullName>AverageTaxPaidSoFar__c</fullName>
    <formula>TotalTaxPaidSoFar__c  /  NoOfTimesTaxPaidSoFar__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>AverageTaxPaidSoFar</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>