force-app/main/default/objects/Tax_Payer_Detail__c/fields/HighestTaxAmtPaid__c.field-meta.xml
<CustomField>
    <fullName>HighestTaxAmtPaid__c</fullName>
    <label>HighestTaxAmtPaid</label>
    <summarizedField>Tax_Paid_Per_Month__c.Tax_Amount__c</summarizedField>
    <summaryForeignKey>Tax_Paid_Per_Month__c.TaxPayerName__c</summaryForeignKey>
    <summaryOperation>max</summaryOperation>
    <type>Summary</type>
</CustomField>