force-app/main/default/objects/Tax_Payer_Detail__c/fields/NoOfTimesTaxPaidSoFar__c.field-meta.xml
<CustomField>
    <fullName>NoOfTimesTaxPaidSoFar__c</fullName>
    <label>NoOfTimesTaxPaidSoFar</label>
    <summaryForeignKey>Tax_Paid_Per_Month__c.TaxPayerName__c</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>