force-app/main/default/objects/Tax_Payer_Detail__c/fields/NumberOfTimesTaxPaidBy2015__c.field-meta.xml
<CustomField>
    <fullName>NumberOfTimesTaxPaidBy2015__c</fullName>
    <label>NumberOfTimesTaxPaidBy2015</label>
    <summaryFilterItems>
        <field>Tax_Paid_Per_Month__c.Year__c</field>
        <operation>equals</operation>
        <value>2015</value>
    </summaryFilterItems>
    <summaryForeignKey>Tax_Paid_Per_Month__c.TaxPayerName__c</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>