force-app/main/default/objects/Tax_Payer_Detail__c/fields/TotalTaxPaidSoFar__c.field-meta.xml
<CustomField>
    <fullName>TotalTaxPaidSoFar__c</fullName>
    <label>TotalTaxPaidSoFar</label>
    <summarizedField>Tax_Paid_Per_Month__c.Tax_Amount__c</summarizedField>
    <summaryForeignKey>Tax_Paid_Per_Month__c.TaxPayerName__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>