force-app/main/default/objects/Tax_Payer_Detail__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>HighestTaxAmtPaid__c</columns>
    <columns>TotalTaxPaidBy2017__c</columns>
    <columns>AverageTaxPaidSoFar__c</columns>
    <columns>NumberOfTimesTaxPaidBy2015__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>